@@ -1,22 +1,28 @@
 package com.skilllink.backend.service;
 
 import com.skilllink.backend.dto.perfilHabilidad.ActualziarHabilidad;
+import com.skilllink.backend.dto.perfilHabilidad.HabilidadesPerfil;
 import com.skilllink.backend.dto.perfilHabilidad.HabilidadesSeleccionadas;
 import com.skilllink.backend.entity.Habilidad;
 import com.skilllink.backend.entity.Perfil;
 import com.skilllink.backend.entity.PerfilHabilidad;
 import com.skilllink.backend.entity.Usuario;
 import com.skilllink.backend.enums.NivelHabilidad;
+import com.skilllink.backend.mapper.PerfilHabilidadMapper;
 import com.skilllink.backend.repository.HabilidadRepositorio;
 import com.skilllink.backend.repository.PerfilHabilidadRepositorio;
 import com.skilllink.backend.repository.PerfilRepositorio;
 import jakarta.persistence.EntityNotFoundException;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.Banner;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 public class PerfilHabilidadService {
@@ -28,19 +34,18 @@ public class PerfilHabilidadService {
     PerfilHabilidadRepositorio perfilHabilidadRepositorio;
     @Autowired
     HabilidadRepositorio habilidadRepositorio;
+    @Autowired
+    PerfilHabilidadMapper perfilHabilidadMapper;
 
 
     public PerfilHabilidad actualizarUsuario (ActualziarHabilidad dto, Usuario usuario){
-
-        PerfilHabilidad perfilHabilidad = perfilHabilidadRepositorio.findByPerfilUsuarioAndHabilidadIdHabilidad(usuario, dto.idHabilidad()).orElseThrow(
+        PerfilHabilidad perfilHabilidad = perfilHabilidadRepositorio
+                .findByPerfilUsuarioAndHabilidadIdHabilidad(usuario, dto.idHabilidad()).orElseThrow(
                 () -> new EntityNotFoundException("No se encontro habilidad con id: " + dto.idHabilidad() + " relacionada al usuario")
         );
-        if (dto.nivel() != null && !dto.nivel().isBlank()){
-            perfilHabilidad.setNivel(NivelHabilidad.valueOf(dto.nivel()));
-        }
-        if (dto.anosDeExperiencia() != null){
-            perfilHabilidad.setAnosExperiencia(dto.anosDeExperiencia());
-        }
+
+        perfilHabilidadMapper.updateEntityFromDto(dto,perfilHabilidad);
+
         return perfilHabilidadRepositorio.save(perfilHabilidad);
     }
 
@@ -58,35 +63,26 @@ public class PerfilHabilidadService {
 
     }
 
-    public List<HabilidadesSeleccionadas> agregarHabilidad(List<HabilidadesSeleccionadas> habilidadesSeleccionadas,
+    public List<HabilidadesSeleccionadas> agregarHabilidad(List<HabilidadesSeleccionadas> habilidades,
                                                            Usuario usuario) {
         Perfil perfil = perfilRepositorio.findByUsuario(usuario);
         List<Long> idHabilidadesExistentes = perfilHabilidadRepositorio.findIdHabilidadByPerfilId(perfil.getIdPerfil());
-        List<PerfilHabilidad> nuevasAsociaciones = new ArrayList<>();
+        List<PerfilHabilidad> nuevosPh = habilidades.stream().map(dto -> {
 
-        for (HabilidadesSeleccionadas dto : habilidadesSeleccionadas) {
-            if (idHabilidadesExistentes.contains(dto.idHabildad())) {
-                throw new IllegalStateException("La habilidad con ID " + dto.idHabildad() + " ya está asociada a este perfil.");
+            if (idHabilidadesExistentes.contains(dto.idHabildad())){
+                throw new IllegalStateException("Habilidad con id " + dto.idHabildad() + " ya existe en el perfil");
             }
             Habilidad habilidad = habilidadRepositorio.findById(dto.idHabildad())
-                    .orElseThrow(() -> new EntityNotFoundException("Habilidad no encontrada con ID: " + dto.idHabildad()));
-            
-            PerfilHabilidad nuevaAsociacion = new PerfilHabilidad();
-            nuevaAsociacion.setPerfil(perfil);
-            nuevaAsociacion.setHabilidad(habilidad);
-            nuevaAsociacion.setNivel(NivelHabilidad.valueOf(dto.nivel()));
-            nuevaAsociacion.setAnosExperiencia(dto.anosDeExperiencia());
-            nuevasAsociaciones.add(nuevaAsociacion);
-            
-        }
-        List<PerfilHabilidad> asociacionesGuardadas = perfilHabilidadRepositorio.saveAll(nuevasAsociaciones);
+                    .orElseThrow(() -> new EntityNotFoundException("Habilidad no encontrada con id" + dto.idHabildad()));
 
-        return asociacionesGuardadas.stream()
-                .map(ph -> new HabilidadesSeleccionadas(
-                        ph.getHabilidad().getIdHabilidad(),
-                        String.valueOf(ph.getNivel()),
-                        ph.getAnosExperiencia()))
-                .collect(Collectors.toList());
+            PerfilHabilidad nuevoPh = perfilHabilidadMapper.toEntity(dto, habilidad, perfil);
+
+            return nuevoPh;
+        }).toList();
+
+        List<PerfilHabilidad> habilidadList = perfilHabilidadRepositorio.saveAll(nuevosPh);
+
+        return habilidadList.stream().map(perfilHabilidadMapper::toDto).toList();
 
     }
 }
